# Signal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe  ToDo  imgui.ini
include/: Handler.h  LowFrequencyOscillator.h  Module.h  ModuleEditor.h  Output.h  SpeedManipulation.h  Voltage-ControlledAmplifier.h  VoltageControllFilter.h  WaveForm.h
include/Functions/: Audio.h  CV.h  ConsoleHandling.h  Draw.h  ImGuiUtil.h  Module.h  Window.h
include/MDU/: CreateMDU.h  FileWatcher.h  ModuleLoader.h
include/Tools/: mduParser.h  mdu_api.h
modules/: ADSM.mdu  LFO.mdu  Output.mdu  TemplateModule.mdu  Test.mdu  Trigger.mdu  VCA.mdu  VCF.mdu  VCO.mdu
src/: Handler.cpp  WaveFormGenerator.cpp
src/Audio/: Audio.cpp  CV.cpp  MIDIHandling.cpp  Record.cpp  WaveForm.cpp
src/Draw/: Draw.cpp  ImGuiUtil.cpp  PopUp.cpp  TopBar.cpp  Window.cpp
src/Draw/UI/: RackContextMenu.cpp  TopMenu.cpp
src/Functions/: Audio.cpp  CV.cpp  ConsoleHandling.cpp  Draw.cpp  ImGuiUtil.cpp  WaveForm.cpp  Window.cpp  mduParser.cpp
src/MDU/: CreateMDU.cpp  FileWatcher.cpp  ModuleLoader.cpp  mduParser.cpp
src/Modules/: Handler.cpp  LowFrequencyOscillator.cpp  ModuleEditor.cpp  Output.cpp  Output.mdu  SpeedManipulator.cpp  Test.mdu  Voltage-ControlledAmplifier.cpp  VoltageControllFilter.cpp  WaveFormGenerator.cpp
src/include/: Handler.h  HandlerShared.h
src/include/Audio/: Audio.h  MIDIHandling.h  Record.h
src/include/Audio/UI/: RackContextMenu.h
src/include/Draw/: Draw.h  ImGuiUtil.h  Window.h
src/include/Draw/UI/: RackContextMenu.h  TopMenu.h
src/include/Functions/: ConsoleHandling.h  Module.h
src/include/MDU/: CreateMDU.h  ModuleLoader.h  mduParser.h  mdu_api.h
